Release jolt-hegel v0.5.0 with official Babashka FFI (#17)
## Summary

- replace the development Babashka fork with official FFI-capable
Babashka 1.13.220 assets
- share the upstream babashka.ffi adapter between Babashka and JVM
Clojure while retaining the canonical EDN ABI
- preserve lexical native lifetimes, by-value aggregate support, and all
77 libhegel bindings
- distinguish unsupported static Babashka builds from missing libhegel
installations
- preserve exact native-call arity during unsigned carrier coercion
- retain all protected three-OS Native image and runtime status contexts
using checksum-pinned official artifacts
- prepare the v0.5.0 source and release documentation

## Local evidence

- official dynamic Babashka 1.13.220 ABI and full semantic suite: 0
failures
- official static Babashka: capability-specific unsupported-runtime
diagnostic
- JVM JDK 25 ABI/full suite and consumer smoke: pass
- JVM JDK 22 full suite: pass
- Jolt full suite and consumer smoke under pinned Chez 10.4.1: pass
- actionlint and git diff --check: pass

The release tag will be created only after this PR and public main pass
the complete protected cross-platform matrix.